<resources>
    <string name="app_name">Ghost Finder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_delete_alert"> Do you wish to delete this player?</string>
    <string name="player_added_alert"> Player %s has been added</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_your_character">Name your character...</string>
    <string name="ok">OK</string>
    <string name="insufficient_skillpoint">Insufficient Skill Points!</string>
    <string name="insufficient_resource">%s cannot be lower!</string>
    <string name="total_points">Total points:</string>
    <string name="level_semi">Level: </string>
    <string name="attack">Attack</string>
    <string name="main_menu">main menu</string>
    <string name="move_to_next_stage">Move to next stage</string>
    <string name="flee">Flee</string>
    <string name="name">Name: </string>
    <string name="health">Health: </string>
    <string name="pow" translatable="false">POW: </string>
    <string name="agi" translatable="false">AGI: </string>
    <string name="def" translatable="false">DEF: </string>
    <string name="upgrade_your_stats">Upgrade your stats!</string>
    <string name="back">Back</string>
    <string name="game_over">GAME OVER</string>
    <string name="press_back_to_menu_to_restart_the_game">Press back to menu to restart the game</string>
    <string name="level_up">Level Up!</string>
    <string name="warning_player_will_be_deleted">Warning: Player will be deleted!</string>
    <string name="info">Info</string>
    <string name="check_out_the_artist">Check out the artist:</string>
    <string name="version">Version</string>
    <string name="just_kill_ghosts_that_s_it_good_luck">Just kill ghosts. That\'s it! Good luck :)</string>
    <string name="how_to_play_ghost_finder">How to play Ghost Finder!</string>
    <string name="slay_the_ghosts_of_the_night">Slay the ghosts of the night!</string>
    <string name="ghosts_left">Ghosts left:</string>
    <string name="white">White</string>
    <string name="change_color">Change color:</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="change_text_color">Change text color:</string>
    <string name="comic_sans" translatable="false">Comic Sans</string>
    <string name="times_new_roman" translatable="false">Times New Roman</string>
    <string name="change_language">Change language:</string>
    <string name="french">French</string>
    <string name="orange">Orange</string>
    <string name="english">English</string>
    <string name="select_player_to_delete">Select player to delete!</string>
    <string name="select_player_to_play">Select player to play!</string>
</resources>